[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/inventoryIcon.gd" type="Script" id=2]
[ext_resource path="res://fonts/Regular.tres" type="DynamicFont" id=3]

[node name="inventoryIcon" type="TextureButton"]
margin_right = 16.0
margin_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.9, 0.9 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 6.14398
margin_top = 9.05963
margin_right = 66.144
margin_bottom = 59.0596
rect_scale = Vector2( 0.2, 0.2 )
custom_colors/font_color_shadow = Color( 0.321569, 0.321569, 0.321569, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 3 )
text = "64"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_inventoryIcon_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_inventoryIcon_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_inventoryIcon_pressed"]
